--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
             </dependency>
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+                <version>${spring-cloud.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
                 <version>${spring-cloud.version}</version>
             </dependency>
@@ -31,5 +36,6 @@
     </dependencyManagement>
     <modules>
         <module>./eureka-center</module>
+        <module>./first-client</module>
     </modules>
 </project>
