--- a/getaway/src/main/resources/application.yml
+++ b/getaway/src/main/resources/application.yml
@@ -6,7 +6,12 @@ eureka:
       defaultZone: http://127.0.0.1:8761/eureka/
 spring:
   application:
-    name: first-client
-
+    name: getaway
 server:
-  port: 8001
+  port: 8080
+
+zuul:
+  routes:
+    firstClient:
+      path: /first-client/**
+      serviceId: first-client
