--- a/pom.xml
+++ b/pom.xml
@@ -32,10 +32,16 @@
                 <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
                 <version>${spring-cloud.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
+                <version>${spring-cloud.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <modules>
         <module>./eureka-center</module>
         <module>./first-client</module>
+        <module>./getaway</module>
     </modules>
 </project>
