添加日志监控

--- a/eureka-center/pom.xml
+++ b/eureka-center/pom.xml
@@ -25,6 +25,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.github.tanghuibo.springcloudystudy</groupId>
+            <artifactId>basic</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
