--- a/eureka-center/src/main/resources/application.yml
+++ b/eureka-center/src/main/resources/application.yml
@@ -5,6 +5,8 @@ server:
   port: 8761
 eureka:
   client:
+    healthcheck:
+      enabled: true
     register-with-eureka: false
     fetch-registry: false
 
