--- a/first-client/pom.xml
+++ b/first-client/pom.xml
@@ -37,6 +37,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+			<groupId>io.github.tanghuibo.springcloudystudy</groupId>
+			<artifactId>basic</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
