添加第二个客户端路由配置

--- a/getaway/src/main/resources/application.yml
+++ b/getaway/src/main/resources/application.yml
@@ -15,3 +15,7 @@ zuul:
     firstClient:
       path: /first-client/**
       serviceId: first-client
+
+    secondClient:
+      path: /second-client/**
+      serviceId: second-client
