--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /basic/basic.iml
 /second-client/second-client.iml
 /second-client/target/
+/first-client-impl/target/
+/first-client-impl/first-client-impl.iml
