--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@
 /second-client/target/
 /first-client-impl/target/
 /first-client-impl/first-client-impl.iml
+/second-client-impl/target/
+/second-client-impl/second-client-impl.iml
