--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
         <module>./first-client</module>
         <module>./first-client-impl</module>
         <module>./second-client</module>
+        <module>./second-client-impl</module>
         <module>./getaway</module>
         <module>./basic</module>
     </modules>
