--- a/second-client-impl/pom.xml
+++ b/second-client-impl/pom.xml
@@ -10,11 +10,11 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>first-client-impl</artifactId>
+    <artifactId>second-client-impl</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
-    <name>first-client-impl</name>
-    <description>第一个客户端实现</description>
+    <name>second-client-impl</name>
+    <description>第二个客户端实现</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -48,8 +48,9 @@
         </dependency>
         <dependency>
             <groupId>io.github.tanghuibo.springcloudystudy</groupId>
-            <artifactId>first-client</artifactId>
+            <artifactId>second-client</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
