--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <java.version>1.8</java.version>
         <spring-cloud.version>2.2.3.RELEASE</spring-cloud.version>
         <servlet-api.version>4.0.1</servlet-api.version>
+        <spring-cloud-starter-openfeign.version>2.2.3.RELEASE</spring-cloud-starter-openfeign.version>
     </properties>
     <packaging>pom</packaging>
     <dependencyManagement>
@@ -42,6 +43,11 @@
                 <groupId>javax.servlet</groupId>
                 <artifactId>javax.servlet-api</artifactId>
                 <version>${servlet-api.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-openfeign</artifactId>
+                <version>${spring-cloud-starter-openfeign.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
