--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,6 @@
         <java.version>1.8</java.version>
         <spring-cloud.version>2.2.3.RELEASE</spring-cloud.version>
         <servlet-api.version>4.0.1</servlet-api.version>
-        <spring-cloud-starter-openfeign.version>2.2.3.RELEASE</spring-cloud-starter-openfeign.version>
     </properties>
     <packaging>pom</packaging>
     <dependencyManagement>
@@ -47,7 +46,22 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-openfeign</artifactId>
-                <version>${spring-cloud-starter-openfeign.version}</version>
+                <version>${spring-cloud.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+                <version>${spring-cloud.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
+                <version>${spring-cloud.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-netflix-hystrix-dashboard</artifactId>
+                <version>${spring-cloud.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
