--- a/first-client-impl/src/main/resources/application.yml
+++ b/first-client-impl/src/main/resources/application.yml
@@ -1,12 +1,9 @@
-eureka:
-  instance:
-    appname: first-client
-  client:
-    service-url:
-      defaultZone: http://127.0.0.1:8761/eureka/
 spring:
   application:
     name: first-client
-
+  cloud:
+    nacos:
+      discovery:
+        server-addr: "127.0.0.1:8849"
 server:
   port: 8001
