添加 versions-maven-plugin

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /first-client-impl/first-client-impl.iml
 /second-client-impl/target/
 /second-client-impl/second-client-impl.iml
+/*/*.versionsBackup
