添加 alibaba sentinel

--- a/first-client-impl/pom.xml
+++ b/first-client-impl/pom.xml
@@ -50,6 +50,10 @@
             <artifactId>first-client</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
