--- a/second-client-impl/src/main/resources/application.yml
+++ b/second-client-impl/src/main/resources/application.yml
@@ -4,7 +4,10 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: "127.0.0.1:8849"
+        server-addr: "127.0.0.1:8848"
+    sentinel:
+      transport:
+        dashboard: "127.0.0.1:8850"
 
 server:
   port: 8002
