--- a/first-client-impl/src/main/resources/application.yml
+++ b/first-client-impl/src/main/resources/application.yml
@@ -1,4 +1,12 @@
 spring:
+  zipkin:
+    base-url: "http://127.0.0.1:9411"
+  sleuth:
+    web:
+      client:
+        enabled: true
+    sampler:
+      probability: 1
   application:
     name: first-client
   cloud:
