--- a/second-client-impl/src/main/resources/application.yml
+++ b/second-client-impl/src/main/resources/application.yml
@@ -36,3 +36,6 @@ feign:
         connectTimeout: 3000
   hystrix:
     enabled: true
+logging:
+  pattern:
+    console: "%clr(%d{${yyyy-MM-dd HH:mm:ss.SSS}}){faint} %clr(${LOG_LEVEL_PATTERN:-%5p}) %clr(${PID:- }){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n"
