--- a/first-client-impl/src/main/resources/application.yml
+++ b/first-client-impl/src/main/resources/application.yml
@@ -26,3 +26,7 @@ spring:
         dashboard: "127.0.0.1:8850"
 server:
   port: 8001
+logging:
+  pattern:
+    console: "%clr(%d{${yyyy-MM-dd HH:mm:ss.SSS}}){faint} [%X{traceId},%X{spanId}] [%thread] %clr(${PID:- }){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n"
+
