--- a/getaway/src/main/resources/application.yml
+++ b/getaway/src/main/resources/application.yml
@@ -42,3 +42,7 @@ spring:
             - RewritePath=/second-client/(?<segment>.*), /$\{segment}
 server:
   port: 8080
+logging:
+  pattern:
+    console: "%clr(%d{${yyyy-MM-dd HH:mm:ss.SSS}}){faint} [%X{traceId},%X{spanId}] [%thread] %clr(${PID:- }){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n"
+
